# figma-plugin-mcp

./: .gitignore  INSTALL.md  README.md  code.js  start-rust-relay.bat  start-socket.bat  ui.html
contracts/: figma-mcp-bridge.schema.json
docs/: ARCHITECTURE.md  RUST_RELAY.md
rust-relay/: Cargo.toml  README.md
rust-relay/src/: config.rs  main.rs  protocol.rs  state.rs  web.rs
scripts/: enable-auto-channel.ps1
server/: socket.js
